--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
+    "sortablejs": "^1.7.0",
     "truffle-hdwallet-provider": "0.0.3"
   }
 }
